# ProVANT-Control-Test-gem5

./: .project  Help gem5  Makefile2  README.md  ThingsToRemember  What to look for in stats.txt  boot.arm64  control.rcS  hackback.rcS  help fs  look for in stats.txt  scriptControl.rcS  test.rcS
BS/controlLoopRandBS/: Makefile
HIL-Henrique/: help fs
HIL-Henrique/Resultados LoopRand/: bs.txt  hinf.txt  lqr.txt  scriptResults
control_strategies/: .project
delay/: Makefile  delay  delay.cpp
gem5/: Makefile  gem5
memoryCompileError/vand2load_Franklin_teste/: CMakeLists.txt  Makefile  franklinTeste.cpp
memoryCompileError/vand2load_Franklin_teste/include/: linear_kalman_filter.cpp  routines.cpp
memoryCompileError/vant2load_Franklin_ZSE/: CMakeLists.txt  Icontroller.hpp  Makefile  franklinZSE.cpp  package.xml
memoryCompileError/vant2load_Franklin_ZSE/include/: routines.cpp
tasksAdapHinf/: Makefile  adap.cpp  tasksAdapHinf.cpp
taskslqrAdap/: Icontroller.hpp  Makefile  adap.cpp  lqr.cpp  pthreadsNotWorking.cpp  taskslqrAdap.cpp  taskslqrAdapPthreadOrganizado.cpp
testePthreads/: Makefile  testePthreads
vand2load_Franklin_teste/: package.xml
vant2_lqr/: Makefile  vant2lqr  vant2lqr (copy).cpp  vant2lqr.cpp  vant2lqr100  vant2lqrArtigo  vant2lqrBack  vant2lqrD
vant2_lqrFP/: Makefile  lqr.cpp  vant2lqr.cpp  vant2lqrFP  vant2lqrFP.cpp  vant2lqrFPBack
vant2load_Franklin/: Makefile  controlFranklin.cpp  franklin.cpp  gem5fast1ControlLoop.txt
vant2load_FranklinDebug/: CMakeLists.txt  Makefile  franklin.cpp  franklinBack.cpp  vant2loadFranklinD.cpp
vant2load_FranklinDebug/include/: routines.cpp
vant2load_Franklin_CZL/: Makefile  franklinCZL.cpp  vant2loadFranklinCZL.cpp
vant2load_Franklin_LKF/: Makefile  franklinLKF.cpp
vant2load_Franklin_ZSE/: franklinZSE.cpp  vant2loadFranklinZSE.cpp
vant2load_Hinfinity/: Makefile  hinfinity.cpp  vant2loadHinfinity  vant2loadHinfinity.cpp  vant2loadHinfinity100
vant2load_HinfinityFP/: Makefile  gem5fastControl1Execute  hinfinity.cpp  vant2loadHinfinityFP.cpp
vant2load_HinfinityNoRandom/: Makefile  hinfinity.cpp
vant2load_hinfinity/: Makefile  hinfinity.cpp  vant2loadHinfinity.cpp
vant3_adaptiveMixCtrl/: Makefile  adaptive.cpp  vant3adaptiveMixCtrl.cpp
vant3_adaptive_mix_ctrl/: Makefile  vant3adap  vant3adap.cpp  vant3adap100
vant3_lqr/: Makefile  lqr.cpp  vant3lqr  vant3lqr.cpp
vant4_winf/: vant4winf
vantloadMarcelo/: Makefile  config.ini  marcelo.cpp  vantloadMarcelo  vantloadMarcelo.cpp
(+204 files in other folders)
